# axiom-api-cli

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  _cargo-axiom  build.rs  cargo-axiom.bash  rust-toolchain.toml  symbol_test
.github/workflows/: lint.yml
configs/: openvm-v1.4.toml
crates/cli/: Cargo.toml  README.md  build.rs
crates/cli/src/: config.rs  formatting.rs  lib.rs  main.rs  output.rs  progress.rs
crates/cli/src/commands/: build.rs  config.rs  download_keys.rs  init.rs  mod.rs  projects.rs  prove.rs  register.rs  run.rs  upload_elf.rs  upload_exe.rs  verify.rs  version.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: build.rs  config.rs  formatting.rs  input.rs  lib.rs  projects.rs  prove.rs  run.rs  verify.rs  vm_config.rs
src/: config.rs  main.rs
src/commands/: build.rs  config.rs  init.rs  keygen.rs  mod.rs  prove.rs  register.rs  verify.rs  version.rs
