[workspace.package]
version = "0.4.0"
edition = "2024"
authors = ["Axiom Team"]
license = "MIT"

[workspace]
members = ["crates/cli", "crates/sdk"]
resolver = "2"

[workspace.dependencies]
# OpenVM
cargo-openvm = { git = "https://github.com/openvm-org/openvm.git", rev = "6dffa9b44ba088df4dbd26baa7ec47967f3e0855", default-features = false }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", rev = "6dffa9b44ba088df4dbd26baa7ec47967f3e0855", default-features = false }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", rev = "6dffa9b44ba088df4dbd26baa7ec47967f3e0855", default-features = false }

# Axiom Proving API
cargo-axiom = { path = "crates/cli", default-features = false }
axiom-sdk = { path = "crates/sdk", default-features = false }
