[workspace.package]
version = "0.4.0"
edition = "2024"
authors = ["Axiom Team"]
license = "MIT"

[workspace]
members = ["crates/cli", "crates/sdk"]
resolver = "2"

[workspace.dependencies]
# OpenVM
cargo-openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.2.1-rc.0", default-features = false }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.2.1-rc.0", default-features = false }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.2.1-rc.0", default-features = false }

# Axiom Proving API
cargo-axiom = { path = "crates/cli", default-features = false }
axiom-sdk = { path = "crates/sdk", default-features = false }

comfy-table = { version = "7.1.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.141" }
# Last version that supports Rust 1.85.1
cargo_metadata = { version = "0.20.0" }
