[workspace.package]
version = "1.0.1"
edition = "2024"
authors = ["Axiom Team"]
license = "MIT"

[workspace]
members = ["crates/cli", "crates/sdk"]
resolver = "3"

[workspace.dependencies]
# OpenVM
cargo-openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0", default-features = false }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0", default-features = false, features = [
    "evm-prove",
] }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0", default-features = false }

# Axiom Proving API
cargo-axiom = { path = "crates/cli", default-features = false }
axiom-sdk = { path = "crates/sdk", default-features = false }

comfy-table = { version = "7.1.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.142" }
cargo_metadata = { version = "0.21.0" }
toml_edit = "0.23.2"
