[package]
name = "cargo-axiom"
description = "A Cargo subcommand for the Axiom Proving API"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axiom-sdk = { workspace = true }
cargo-openvm = { workspace = true }

comfy-table = { workspace = true }
serde_json = { workspace = true }

clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6.12"
dotenvy = "0.15.7"
toml_edit = "0.23.2"
console = "0.16.0"
indicatif = "0.18"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
cargo_metadata = { workspace = true }
