[package]
name = "cargo-axiom"
description = "A Cargo subcommand for the Axiom Proving API"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axiom-sdk = { workspace = true }
cargo-openvm = { workspace = true }

comfy-table = { workspace = true }
serde_json = { workspace = true }

clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.5"
eyre = "0.6.12"
dotenvy = "0.15.7"
toml_edit = { workspace = true }

[build-dependencies]
cargo_metadata = { workspace = true }
