[package]
name = "axiom-sdk"
description = "A Rust SDK for the Axiom Proving API"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cargo-openvm = { workspace = true }
openvm-sdk = { workspace = true, features = ["evm-prove"] }
openvm-build = { workspace = true }

dirs = "6.0.0"
reqwest = { version = "0.12.22", features = ["json", "blocking", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = { version = "0.4", default-features = false }
flate2 = "1.0"
walkdir = "2.3"
eyre = "0.6.12"
rustc_version = "0.4.0"
cargo_metadata = "0.20.0"
