[package]
name = "axiom-sdk"
description = "A Rust SDK for the Axiom Proving API"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cargo-openvm = { workspace = true }
openvm-sdk = { workspace = true }
openvm-build = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
cargo_metadata = { workspace = true }
toml_edit = { workspace = true }

dirs = "6.0.0"
reqwest = { version = "0.12.22", features = ["json", "blocking", "multipart"] }
tar = { version = "0.4", default-features = false }
flate2 = "1.0"
walkdir = "2.3"
eyre = "0.6.12"
rustc_version = "0.4.0"
url = "2.5"
scopeguard = "1.2"
chrono = { version = "0.4", features = ["serde"] }
console = "0.16.0"
indicatif = "0.18"
